--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -101,7 +101,7 @@
           </div>
           <div class="nav-item dropdown" *ngIf="isLogin">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-              Hello{{name}}
+              {{name}}
             </a>
             <div  class="dropdown-menu">
               <a href="#" class="dropdown-item">Thông tin tài khoản</a>
