--- a/src/app/component/admin/form/adduser/adduser.component.html
+++ b/src/app/component/admin/form/adduser/adduser.component.html
@@ -1,1 +1,84 @@
-<p>adduser works!</p>
+<div class="container">
+  <h1 *ngIf="id == 0"> Thêm mới User </h1>
+  <h1 *ngIf="id != 0"> Cập nhập User {{id}} </h1>
+  <form [formGroup]="userForm">
+    <mat-form-field appearance="outline">
+      <mat-label>Họ tên</mat-label>
+      <input matInput placeholder="username" formControlName="name" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Username</mat-label>
+      <input matInput placeholder="Tên đăng nhập" formControlName="username" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input matInput placeholder="password" formControlName="password" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br/>
+    <mat-radio-group aria-label="Select an option" formControlName="isAdmin">
+      <mat-radio-button [value]="1">Client</mat-radio-button>
+      <mat-radio-button [value]="2">Admin</mat-radio-button>
+    </mat-radio-group>
+    <br/>
+    <mat-form-field appearance="outline">
+      <mat-label>Chức vụ</mat-label>
+      <mat-select formControlName="code">
+        <mat-option *ngFor="let item of code" [value]="item.value">
+          {{ item.viewValue }}
+        </mat-option>
+      </mat-select>
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Ngày ngày sinh</mat-label>
+      <input
+        matInput
+        type="datetime-local"
+        placeholder="Ngày sinh"
+        formControlName="dob"
+        require
+      />
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Nhập email" formControlName="email" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Số điện thoại</mat-label>
+      <input matInput placeholder="Nhập số điện thoại" formControlName="phoneNumber" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Địa chỉ</mat-label>
+      <input matInput placeholder="Nhập địa chỉ" formControlName="address" require />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    </mat-form-field>
+    <br />
+    <button
+      type="submit"
+      class="btn btn-success"
+      (click)="saveandGotoList()"
+    >
+    <span *ngIf="id == 0">Thêm mới & trở về danh sách </span>
+    <span *ngIf="id != 0"> Cập nhập & trở về danh sách </span>
+    </button>
+    &nbsp;
+    <button
+      type="submit"
+      class="btn btn-success"
+      (click)="back()"
+    >
+     Quay lại
+    </button>
+  </form>
+</div>
