--- a/src/app/component/admin/home/product/product.component.html
+++ b/src/app/component/admin/home/product/product.component.html
@@ -92,7 +92,7 @@
                       <mat-icon
                         style="cursor: pointer"
                         title="Nhấn vào để soạn"
-                        (click)="deleteProduct(prod.id)"
+                        (click)="deleteDetailProduct(item.id)"
                       >
                         clear
                       </mat-icon>
