--- a/src/app/component/admin/chart/chart.component.html
+++ b/src/app/component/admin/chart/chart.component.html
@@ -1,8 +1,5 @@
 <div class="chart-wrapper container">
   <div class="row">
-    <h1>Thống kê doanh thu năm 2021</h1>
-  </div>
-  <div class="row">
     <canvas
       baseChart
       [datasets]="lineChartData"
@@ -15,28 +12,12 @@
     >
     </canvas>
   </div>
-  <div class="row">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">STT</th>
-          <th scope="col">Tháng</th>
-          <th scope="col">Tổng tiền</th>
-          <th><select class="form-select" aria-label="Default select example">
-            <option selected>Năm</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Tháng 1</td>
-          <td>2000$</td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="row col-6">
+    <h1>Doanh thu của năm {{this.yeared}}</h1>
+  </div>
+  <div class="col-6">
+    <select class="form-select" aria-label="Default select example" [(ngModel)]="yeared" (ngModelChange)="changingValue()" >
+      <option selected *ngFor="let item of yeared" [value]="item.viewValue"> {{ item.viewValue }}</option>
+    </select>
   </div>
 </div>
