--- a/src/app/component/admin/menu/menu.component.html
+++ b/src/app/component/admin/menu/menu.component.html
@@ -86,7 +86,7 @@
             </div>
           </nav>
         </div>
-        <a class="nav-link" href="admin/a-chart">
+        <a class="nav-link" href="admin/a-chart"  *ngIf="kiemtracode">
           <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
           Thống kê
         </a>
