--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -86,7 +86,7 @@
               <a
                 href="#"
                 class="dropdown-item"
-                routerLink="login-register"
+                routerLink="login"
                 routerLinkActive="active"
                 >Đăng nhập</a
               >
